misc update